[package]
name = "native-rdp-rust"
version = "0.0.1"
build = "build.rs"
edition = "2018"

[lib]
name = "nativerdprust"
crate-type = ["cdylib"]


[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
hex = { version = "^0.4"}
winapi = { version = "^0.3", features = ["winsock2"] }
minifb = { version = "^0.15" }
clap = { version = "^2.33"}
libc = { version = "^0.2"}
rdp-rs = "0.1.0"
hmac = "^0.7"
neon-serde = "0.2.0"
serde_derive = "1.0.80"
serde = "1.0.80"